Fix layout problem in mobile media -6

--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -57,3 +57,7 @@ picture {
   width: 100%;
   height: auto;
 }
+
+img {
+  display: block;
+}
